infra/kubernetes/base/shared/db-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniz-db-ui
  labels:
    app: uniz-db-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniz-db-ui
  template:
    metadata:
      labels:
        app: uniz-db-ui
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: cb-workspace
              mountPath: /opt/cloudbeaver/workspace
      volumes:
        - name: cb-workspace
          persistentVolumeClaim:
            claimName: uniz-db-ui-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uniz-db-ui
spec:
  selector:
    app: uniz-db-ui
  ports:
    - port: 8978
      targetPort: 8978
  type: ClusterIP
